# algorithms-practice

./: CMakeLists.txt
sorting/: bubbleSort.cpp  mergeSort.cpp  quickSort.cpp  selectionSort.cpp
